# ChangeLog for net-firewall/fwbuilder
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/fwbuilder/ChangeLog,v 1.111 2011/12/24 19:46:50 kumba Exp $

*fwbuilder-5.0.1.3592 (24 Dec 2011)

  24 Dec 2011; Joshua Kinard <kumba@gentoo.org> +fwbuilder-5.0.1.3592.ebuild:
  Update to 5.0.1.3592

*fwbuilder-5.0.0.3568 (16 Dec 2011)

  16 Dec 2011; Joshua Kinard <kumba@gentoo.org>
  -files/3.0.7-secure-mktemp.patch, fwbuilder-4.2.2.3541.ebuild,
  +fwbuilder-5.0.0.3568.ebuild, +files/fwbuilder-5.0.0.3568-ldflags.patch,
  -files/4.x-qmake-use-LDFLAGS.patch:
  Add 5.0.0.3568, remove old files no longer used, and remove uneeded dep on
  libfwbuilder, which no longer exists. Closes #387759.

  20 Nov 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -fwbuilder-3.0.7.ebuild:
  Remove old

  21 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -fwbuilder-4.1.2.ebuild, -fwbuilder-4.1.3.ebuild:
  Remove old

  21 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  fwbuilder-4.2.2.3541.ebuild, +files/fwbuilder-4.2.2.3541-flags.patch,
  -files/fwbuilder-4.2.2.3541-ldflags.patch:
  Respect CFLAGS and CXXFLAGS, bug 372203

  23 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  fwbuilder-4.2.2.3541.ebuild:
  ppc/ppc64 stable wrt #371011

  13 Jul 2011; Markus Meier <maekke@gentoo.org> fwbuilder-4.2.2.3541.ebuild:
  x86 stable, bug #371011

  20 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
  fwbuilder-4.2.2.3541.ebuild:
  Stable on amd64 wrt bug #371011

  29 May 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  fwbuilder-4.2.2.3541.ebuild, +files/fwbuilder-4.2.2.3541-ccache.patch:
  Disable ccache and distcc autodetection, bug 346009

  29 May 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  fwbuilder-3.0.7.ebuild:
  Needs dev-java/antlr[static-libs] if useflag defined, bug 368325; EAPI bump

*fwbuilder-4.2.2.3541 (15 May 2011)

  15 May 2011; Andreas K. Huettel <dilfridge@gentoo.org>